--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Atelier Git Workflow</title>
+    <title>Atelier Git Workflow New</title>
 </head>
 
 <body>
 
     <h1 class="some-heading">GIT WORKFLOW</h1>
 
-</body>
-
-</html>
+</body></html>
 
